[package]
name = "pid_ball"
version = "0.1.0"
authors = ["Raui Ghazaleh <rj.ghazaleh@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = "0.23.0"
eframe = "0.23.0"
log = "0.4"
web-time = "0.2.2"
egui_plot = "0.23.0"
rand = "0.8.5"
rand_distr = "0.4.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
